--- a/UIs/nOperator.ui
+++ b/UIs/nOperator.ui
@@ -23,7 +23,7 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_4" rowstretch="1,0,1,0,0" columnstretch="1,0">
+   <layout class="QGridLayout" name="gridLayout_4" rowstretch="1,0,1,0,0,0" columnstretch="1,0">
     <property name="leftMargin">
      <number>4</number>
     </property>
@@ -219,6 +219,11 @@
          </item>
          <item>
           <property name="text">
+           <string>Plasma scale[um/px] lambda[nm]</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
            <string>Transpose</string>
           </property>
          </item>
@@ -352,7 +357,7 @@
       </layout>
      </widget>
     </item>
-    <item row="4" column="1">
+    <item row="5" column="1">
      <widget class="QPushButton" name="copyButton">
       <property name="font">
        <font>
@@ -364,7 +369,7 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="0">
+    <item row="5" column="0">
      <widget class="QPushButton" name="calculate">
       <property name="font">
        <font>
@@ -375,6 +380,19 @@
        <string>Do operation</string>
       </property>
      </widget>
+    </item>
+    <item row="3" column="0">
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
     </item>
    </layout>
   </widget>
