--- a/UIs/nPreferences.ui
+++ b/UIs/nPreferences.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>451</width>
-    <height>423</height>
+    <width>480</width>
+    <height>506</height>
    </rect>
   </property>
   <property name="font">
@@ -22,7 +22,7 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QGridLayout" name="gridLayout_4">
     <property name="leftMargin">
      <number>4</number>
     </property>
@@ -35,7 +35,7 @@
     <property name="bottomMargin">
      <number>4</number>
     </property>
-    <item>
+    <item row="1" column="1">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
        <number>1</number>
@@ -202,6 +202,24 @@
          </widget>
         </item>
         <item>
+         <widget class="QCheckBox" name="checkUpdates">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Check for updates</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+          <property name="neutrinoSave" stdset="0">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="verticalSpacer">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -220,20 +238,42 @@
        <attribute name="title">
         <string>Decorations</string>
        </attribute>
-       <layout class="QGridLayout" name="gridLayout_4" columnstretch="0,1">
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
-         <number>4</number>
-        </property>
-        <item row="5" column="0">
+       <layout class="QGridLayout" name="gridLayout_8">
+        <item row="8" column="1">
+         <spacer name="verticalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="7" column="0">
+         <widget class="QCheckBox" name="showDimPixel">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Show image size in pixels</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+          <property name="tristate">
+           <bool>false</bool>
+          </property>
+          <property name="neutrinoSave" stdset="0">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0">
          <widget class="QWidget" name="widget_2" native="true">
           <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,0">
            <property name="leftMargin">
@@ -300,7 +340,11 @@
             <number>0</number>
            </property>
            <item row="0" column="2">
-            <widget class="QSpinBox" name="fontSize"/>
+            <widget class="QSpinBox" name="fontSize">
+             <property name="value">
+              <number>1</number>
+             </property>
+            </widget>
            </item>
            <item row="0" column="1">
             <widget class="QFontComboBox" name="fontFace"/>
@@ -308,74 +352,15 @@
           </layout>
          </widget>
         </item>
-        <item row="3" column="0">
-         <widget class="QLabel" name="label">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_3">
           <property name="font">
            <font>
             <pointsize>10</pointsize>
            </font>
           </property>
           <property name="text">
-           <string>Image name length</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item row="8" column="0" colspan="2">
-         <widget class="QCheckBox" name="askCloseUnsaved">
-          <property name="font">
-           <font>
-            <pointsize>10</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>Ask before closing unsaved images</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-          <property name="neutrinoSave" stdset="0">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="1">
-         <widget class="QComboBox" name="localeCombo"/>
-        </item>
-        <item row="3" column="1">
-         <widget class="QSpinBox" name="physNameLength">
-          <property name="value">
-           <number>35</number>
-          </property>
-          <property name="neutrinoSave" stdset="0">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="10" column="0">
-         <spacer name="verticalSpacer_2">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="4" column="0">
-         <widget class="QLabel" name="label_2">
-          <property name="font">
-           <font>
-            <pointsize>10</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>Zoom increment</string>
+           <string>Icon size</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -383,18 +368,12 @@
          </widget>
         </item>
         <item row="4" column="1">
-         <widget class="QSpinBox" name="currentStepScaleFactor">
-          <property name="suffix">
-           <string>%</string>
-          </property>
-          <property name="minimum">
-           <number>1</number>
-          </property>
-          <property name="maximum">
-           <number>999</number>
-          </property>
+         <widget class="QComboBox" name="localeCombo"/>
+        </item>
+        <item row="2" column="1">
+         <widget class="QSpinBox" name="physNameLength">
           <property name="value">
-           <number>15</number>
+           <number>35</number>
           </property>
           <property name="neutrinoSave" stdset="0">
            <bool>true</bool>
@@ -446,51 +425,49 @@
           </item>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_3">
+        <item row="3" column="0">
+         <widget class="QLabel" name="label_2">
           <property name="font">
            <font>
             <pointsize>10</pointsize>
            </font>
           </property>
           <property name="text">
-           <string>Icon size</string>
+           <string>Zoom increment</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
-        <item row="7" column="0" colspan="2">
-         <widget class="QCheckBox" name="showDimPixel">
-          <property name="font">
-           <font>
-            <pointsize>10</pointsize>
-           </font>
+        <item row="3" column="1">
+         <widget class="QSpinBox" name="currentStepScaleFactor">
+          <property name="suffix">
+           <string>%</string>
           </property>
-          <property name="text">
-           <string>Show image size in pixels</string>
+          <property name="minimum">
+           <number>1</number>
           </property>
-          <property name="checked">
-           <bool>true</bool>
+          <property name="maximum">
+           <number>999</number>
           </property>
-          <property name="tristate">
-           <bool>false</bool>
+          <property name="value">
+           <number>15</number>
           </property>
           <property name="neutrinoSave" stdset="0">
            <bool>true</bool>
           </property>
          </widget>
         </item>
-        <item row="9" column="0">
-         <widget class="QCheckBox" name="checkUpdates">
+        <item row="5" column="1">
+         <widget class="QCheckBox" name="askCloseUnsaved">
           <property name="font">
            <font>
             <pointsize>10</pointsize>
            </font>
           </property>
           <property name="text">
-           <string>Check for updates on startup</string>
+           <string>Ask before closing unsaved images</string>
           </property>
           <property name="checked">
            <bool>true</bool>
@@ -498,6 +475,108 @@
           <property name="neutrinoSave" stdset="0">
            <bool>true</bool>
           </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Image name length</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="0" colspan="2">
+         <widget class="QWidget" name="widget_6" native="true">
+          <layout class="QGridLayout" name="gridLayout_9" columnstretch="0,1,0,0,0,1,0">
+           <item row="0" column="1">
+            <widget class="QDoubleSpinBox" name="mouseThickness">
+             <property name="suffix">
+              <string> pt</string>
+             </property>
+             <property name="value">
+              <double>1.000000000000000</double>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="6">
+            <widget class="QPushButton" name="colorRuler">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>Color</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_10">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>Mouse:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="2">
+            <widget class="QPushButton" name="colorMouse">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>Color</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="4">
+            <widget class="QLabel" name="label_11">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>Grid:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="5">
+            <widget class="QDoubleSpinBox" name="gridThickness">
+             <property name="suffix">
+              <string> pt</string>
+             </property>
+             <property name="value">
+              <double>1.000000000000000</double>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="3">
+            <widget class="Line" name="line_2">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </widget>
         </item>
        </layout>
@@ -646,7 +725,7 @@
       </widget>
       <widget class="QWidget" name="plugins">
        <attribute name="title">
-        <string>Plugins</string>
+        <string>Plugin dirs</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_6">
         <property name="leftMargin">
@@ -788,8 +867,6 @@
   <tabstop>physNameLength</tabstop>
   <tabstop>currentStepScaleFactor</tabstop>
   <tabstop>localeCombo</tabstop>
-  <tabstop>showDimPixel</tabstop>
-  <tabstop>askCloseUnsaved</tabstop>
   <tabstop>infoCores</tabstop>
   <tabstop>openclUnit</tabstop>
   <tabstop>openclDescription</tabstop>
